# haskell-bowling-kata

./: .gitignore  README.md  bowling-interface.hs  bowling.cabal  bowling.hs  compile.bash  test.bash
test/: Tests.hs
